[package]
name = "comfy-serve"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures-util = "0.3.32"
mime_guess = "2.0.5"
rand = "0.10.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = { version = "0.13.4", features = ["json"] }
rust-embed = { version = "8.11.0", features = ["mime-guess"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.2", features = ["v4"] }
