[package]
name = "comfy-serve"
version = "0.2.1"
edition = "2024"
description = "A lightweight, API forwarding proxy for ComfyUI."
readme = "README.md"
license = "MIT"
keywords = ["api", "comfyui", "comfy-ui", "http", "fastapi"]
categories = ["api-bindings", "command-line-utilities", "web-programming::http-server", "web-programming::http-client"]
repository = "https://github.com/zenforic/comfy-serve"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.9" }
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures-util = "0.3.32"
mime_guess = { version = "2.0.5", optional = true }
rand = "0.10.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = { version = "0.13.4", features = ["json", "multipart"] }
rust-embed = { version = "8.11.0", features = ["mime-guess"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.2", features = ["v4"] }

[profile.release]
opt-level = 3
strip = true
lto = "thin"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

[features]
default = ["dashboard"]
dashboard = ["dep:rust-embed", "dep:mime_guess"]
